6.ops/jenkins/deploy-statefulset-nosky/04-jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-headless
  namespace: ops
  labels:
    app: jenkins
spec:
  clusterIP: None
  selector:
    app: jenkins
  ports:
  - name: web
    port: 8080
    targetPort: web
  - name: agent
    port: 50000
    targetPort: agent
