6.ops/jenkins/deploy-statefulset-nosky/05-jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
  name: bw-jenkins
  namespace: ops
spec:
  rules:
  - host: bw-jenkins.kaikeba.com
    http:
      paths:
      - backend:
          serviceName: jenkins-headless
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - bw-jenkins.kaikeba.com
    secretName: kkb-secrets
